--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,43 @@
 version: "3.3"
 services:
   rabbitmq-flask:
-        # network_mode: IT420
-        hostname: rabbit-flask
-        container_name: rabbit-flask
-        image: 'rabbitmq:3.8-management-alpine'
-        ports:
-            - '15672:15672'
-            - '5672:5672'
-        volumes:
-          - rabbitmq_log:/var/log/rabbitmq
-          - rabbitmq_data:/var/lib/rabbitmq
-        healthcheck:
-          test: rabbitmq-diagnostics -q ping
-          interval: 10s
-          timeout: 30s
-          retries: 3
+    # network_mode: IT420
+    hostname: rabbit-flask
+    container_name: rabbit-flask
+    image: 'rabbitmq:3.8-management-alpine'
+    ports:
+        - '15672:15672'
+        - '5672:5672'
+    volumes:
+      - rabbitmq_log:/var/log/rabbitmq
+      - rabbitmq_data:/var/lib/rabbitmq
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 10s
+      timeout: 30s
+      retries: 3
+
+  worker:
+    container_name: rabbit-flask-worker
+    build: worker
+    volumes:
+    - worker:/app
+    environment:
+      - PYTHONUNBUFFERED=1
+    depends_on:
+      rabbitmq-flask:
+        condition: service_healthy
+
+  server:
+    container_name: rabbit-flask-server
+    build: server
+    volumes:
+    - server:/app
+    ports:
+    - 5000:5000
+
 volumes:
   rabbitmq_log:
   rabbitmq_data:
+  worker:
+  server:
